server, add update actuation endpoint
