# cloud_api/swagger.yaml
@@ -182,6 +182,28 @@ paths:
                 $ref: '#/components/schemas/Actuation'
         '404':
           description: Instance with the provided ID does not exist
+    put:
+      tags:
+        - actuation
+      summary: Update an instance
+      description: ''
+      operationId: putActuation
+      parameters:
+        - in: path
+          name: actuation_id
+          description: ID of the instance to be modified
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+        '404':
+          description: Instance with the provided ID does already exist
+        '422':
+          description: Invalid data content provided
+      requestBody:
+        $ref: '#/components/requestBodies/Actuation'
     delete:
       tags:
         - actuation
